# landuse_det

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  commit.message  docker-compose.actions.yml  docker-compose.debug.yml  docker-compose.yml  pip.conf  pyproject.toml  requirements.txt
.github/workflows/: build_and_deploy.yml
landuse_api/: __init__.py  __main__.py  config.py  config.yaml  fastapi_init.py  info.py
landuse_api/db/: __init__.py
landuse_api/db/entities/: __init__.py  indicators_dict.py  territories.py
landuse_api/dto/: __init__.py
landuse_api/dto/users/: __init__.py  authorization.py  users.py
landuse_api/exceptions/: __init__.py  auth.py  base.py  common.py
landuse_api/handlers/: __init__.py  health_check.py  landuse.py  redirect.py  routers.py
landuse_api/logic/: __init__.py  landuse.py
landuse_api/logic/api/: urban_db_api_gateway.py
landuse_api/logic/helpers/: __init__.py  renovation_potential.py  urban_api_access.py  urbanization_level.py
landuse_api/middlewares/: __init__.py  authentication.py  dependency_injection.py  exception_handler.py
landuse_api/schemas/: __init__.py  geojson.py
landuse_api/utils/: __init__.py  auth_client.py
landuse_app/: __init__.py  __main__.py  config.py  fastapi_init.py
landuse_app/exceptions/: http_exception_wrapper.py
landuse_app/handlers/: health_check.py  landuse.py  redirect.py  routers.py
landuse_app/logic/: __init__.py  landuse.py
landuse_app/schemas/: profiles.py
storage/: caching.py
storage/interfaces/: __init__.py  cacheable_interface.py
(+19 files in other folders)
