[tool.poetry]
name = "landuse_api"
version = "0.1.0"
description = "API based on landuse_det library"
authors = ["Maxim Vasilyev <mayxis@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
loguru = "^0.7.2"
SQLAlchemy = "^2.0.36"
asyncio = "^3.4.3"
geopandas = "^1.0.1"
pandas = "^2.2.3"
shapely = "^2.0.6"
osmnx = "^2.0.0"
numpy = "^2.1.3"

[tool.poetry.scripts]
launch_api = "landuse_api.__main__:main"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py312']

[tool.pylint.format]
max-line-length = 120
expected-line-ending-format = "LF"
max-locals = 20
max-attributes = 10
max-args = 9
extension-pkg-allow-list = ["networkit"]
ignored-modules = ["alembic.context"]
disable = [
    "duplicate-code",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
split_on_trailing_comma = true
profile = "black"
